--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="root"></div>
-  <form name="websiteForm" netlify netlify-honeypot="bot-field" action="/submit" hidden>
+  <form name="websiteForm" netlify netlify-honeypot="bot-field" action="/success" hidden>
     <input type="text" name="name" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
