fleshing out my html page the form submission, pushing up now so I can see the changes

--- a/public/success.html
+++ b/public/success.html
@@ -7,7 +7,13 @@
   <title>Success Page</title>
 </head>
 <body>
-  <div id="root"></div>
-  <h1>TEST</h1>
+  <span>
+    <img id="logo" src="../src/assets/myLogo.png" />
+    <div id="card">
+      <h3 id="title">THANK YOU!</h3>
+      <p id="text">Alex has received your message and will respond soon.</p>
+      <a href="https://alexramirezdecruz.com/"><button id="home-button">HOME</button></a>
+    </div>
+  </span>
 </body>
 </html>
