got the photo to show up, now just fixing the layout

--- a/public/success.html
+++ b/public/success.html
@@ -8,13 +8,13 @@
   <title>Success Page</title>
 </head>
 <body>
-  <span>
+  <div id="container">
     <img id="logo" src="./myLogo.png" alt="my logo">
     <div id="card">
       <h3 id="title">THANK YOU!</h3>
       <p id="text">Alex has received your message and will respond soon.</p>
       <a href="https://alexramirezdecruz.com/"><button id="home-button">HOME</button></a>
     </div>
-  </span>
+  </div>
 </body>
 </html>
