--- a/public/success.html
+++ b/public/success.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="container">
-    <img id="logo" src="./myLogo.png" alt="my logo">
+    <img id="logo" src="./newLogo.png" alt="my logo">
     <div id="card">
       <h3 id="title">THANK YOU!</h3>
       <p id="text">Alex has received your message and will respond soon.</p>
