Fast CSS overhaul to allow for better mobile support, another refactor should follow, and I removed the contact form, only ever brought spam

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,8 @@
   <title>portfolio-website</title>
 </head>
 
-<body>
+<body style="margin:0;">
   <div id="root"></div>
-  <form name="websiteForm" netlify netlify-honeypot="bot-field" action="/success" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
 </body>
 
 </html>
